Bug 102948 - HYPGEOMDIST last parameter from ODFF spec
Summary: HYPGEOMDIST last parameter from ODFF spec
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Winfried Donkers
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-04 08:19 UTC by raal
Modified: 2016-10-18 14:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2016-10-04 08:19:58 UTC
User-Agent:       Mozilla/5.0 (Windows NT 6.1; rv:49.0) Gecko/20100101 Firefox/49.0
Build Identifier: 

HYPDEOMDIST function is defined in ODFF :
SYNTAX: HYPGEOMDIST( _Integer_ x ; _Integer_ n ; _Integer_ M ; Integer_ N [ ; _Logical_ Cumulative = FALSE() ] )

Last parameter is not working in Calc, for example
=HYPGEOMDIST(2,2,90,100) returns value
 =HYPGEOMDIST(2,2,90,100,0) returns #error -> it's a bug in Calc, because we doesn't follow ODFF specifications.

Reproducible: Always







Reset User Profile?No
Comment 1 Commit Notification 2016-10-14 15:26:36 UTC
Winfried Donkers committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf43ff5262a111f9fbebe58d254b704ec057cbf6

tdf#102948 Make HYPGEOMDIST ODFF1.2 compliant.

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.